# Backend

./: .env  .gitignore  alembic.ini  pyproject.toml
app/: config.py  database.py  dependencies.py  main.py  middleware.py  models.py  operations_with_services.py  operations_with_specialists.py  schemas.py
app/migrations/: env.py
app/migrations/versions/: 6b911f42c563_.py
app/queries/: core.py  orm.py
